--- a/css/estilos.css
+++ b/css/estilos.css
@@ -254,7 +254,8 @@ textarea{
 #boton:hover{
     cursor: pointer;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width:480px) and (max-width:767px)
+ /*@media screen and (min-width: 400px)*/ {
     body{
         width: 100%;
     }
@@ -333,8 +334,8 @@ textarea{
         width: 90%;
     }
 }
-
-@media screen and (min-width: 768px){
+@media screen and (min-width:768px) and (max-width:1024px){
+ /*@media screen and (min-width: 768px)*/
     
     section h1{
         color: #f3ecec;
